[package]
name = "k8s-quantity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.17.0", default-features = false, features = [
	"v1_26",
] }
nom = "7.1.3"
rust_decimal = "1.28.1"
thiserror = "1.0.38"
