[package]
name = "kube_quantity"
version = "0.2.0"

authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]
description = "kube_quantity is a library adding arithmetic operations to the Quantity type from the k8s-openapi crate."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ThomasK33/kube-quantity-rs"

keywords = ["kubernetes", "k8s", "cncf"]

categories = ["algorithms", "data-structures", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.17.0", default-features = false, features = [
	"v1_26",
] }
nom = "7.1.3"
rust_decimal = "1.29.0"
thiserror = "1.0.40"
